clusters/home-workers/ingress-nginx/deis-rpi-k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deis-workflow
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: deis.workflow.rpi-k3s.moomboo.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: howard-moomboo
            port:
              number: 80
